Fix Bug 287829 - inline rename multiple files does not honour  sort order

BUG: 287829
FIXED-IN: 4.9.5
REVIEW: 107718